# rpi-pico

./: .gitignore  README.md
Datasend/: CMakeLists.txt  datasend.c
MPU6050/: CMakeLists.txt
MPU6050/src/: main.c
